# Odin

./: .dockerignore  .vercelignore  API_KEYS.txt  README.md  desktop.ini  docker-compose.yml  install.ps1  install.sh  next.config.ts  package-lock.json  package.json  valkyrie-config.json  vercel.json
data/: odin_local.db
valkyrie/: .env.example  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_PI.md  Dockerfile  README.md  dev-start.sh  docker-compose.compat.yml  docker-compose.override.yml  docker-compose.pi.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  env.docker  env.production  install-complete.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  setup-raspberry-pi.sh
valkyrie/apps/api/: config.py  deps.py  main.py  security.py  simple_app.py
valkyrie/apps/api/middleware/: api_key.py  sessions.py
valkyrie/apps/worker/: worker.py
valkyrie/backend/: Dockerfile  requirements.txt
valkyrie/backend/app/: auth.py  main.py  models.py  utils.py
valkyrie/configs/: .env.example  Caddyfile  docker-compose.yml
valkyrie/data/pos/: postmaster.pid
valkyrie/frontend/: Dockerfile  README.md  clear_storage.js  env.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
valkyrie/frontend/src/: App.jsx  index.css
valkyrie/migrations/: 001_kg.sql  002_user_management.sql  env.py
valkyrie/migrations/versions/: 001_init_core.py  002_ingest_docs.py  003_api_keys.py
valkyrie/postgres/: Dockerfile
valkyrie/scripts/: dev.sh  migrate.sh  seed_db.py
valkyrie/systemd/: valkyrie-api.service  valkyrie-worker.service
(+296 files in other folders)
