[tool.poetry]
name = "valkyrie"
version = "0.1.0"
description = "Self-hosted knowledge ingestion and search platform"
authors = ["Valkyrie Team <ops@valkyrie.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.23"}
SQLAlchemy = "^2.0"
alembic = "^1.12"
psycopg = {extras = ["binary"], version = "^3.2"}
pgvector = "^0.1.8"
redis = "^5.0"
rq = "^1.15"
neo4j = "^5.17"
passlib = {extras = ["bcrypt"], version = "^1.7"}
itsdangerous = "^2.1"
python-multipart = "^0.0.6"
email-validator = "^2.1"
numpy = "^1.26"
pydantic = "^1.10"
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
responses = "^0.25"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
ruff = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
